trunk/Archive2/de/4d441ce7340e95/output
main.cpp: In function 'int main()':
main.cpp:14:36: error: must #include <typeinfo> before using typeid
     std::cout << typeid(decltype(0)) << std::endl;
                                    ^
